--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@tanstack/react-table": "^8.21.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-auto-height": "^8.6.0",
+    "embla-carousel-auto-scroll": "^8.6.0",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
     "isbot": "^5.1.27",
     "lucide-react": "^0.534.0",
     "next-themes": "^0.4.6",
